--- a/10.1_Comments.html
+++ b/10.1_Comments.html
@@ -158,7 +158,7 @@
           
             </div>  
 
-            <a href = "11_Profile"><img src = "img/pp1.png" style="height:50px; width:50px; position: absolute; left:20px;top:130px">
+            <a href = "26_AnotherProfile"><img src = "img/pp1.png" style="height:50px; width:50px; position: absolute; left:20px;top:130px">
             <h4 style="color: white; position: absolute; top:150px; left:90px">awesome list! I’d recommend The Stepford Wives (the original not whatever seems to
                 be going on in that remake) and Poltergeist!</h4>
 
